--- a/packages/scripts/nooblib.cfg
+++ b/packages/scripts/nooblib.cfg
@@ -2,6 +2,7 @@ nslVersion = "0.8";
 
 // Executes all scripts in a dir
 execdir = [
+	local dir;
 	dir = $arg1;
 	
 	loopfiles f $dir cfg [		
@@ -12,6 +13,7 @@ execdir = [
 
 // Executes all scripts in all dirs of a list
 execdirs = [
+	local noob_executeDirs;
 	noob_executeDirs = $arg1;
 	
 	looplist noobexecdirs_dir $noob_executeDirs [
@@ -26,6 +28,7 @@ execdirs = [
 // @return returns a numeric index
 // @example getRunScript "autosorry"
 getRunScript = [
+	local noob_scriptName;
 	noob_scriptName = $arg1;
 	
 	result (indexof $runScript $noob_scriptName);
@@ -39,6 +42,7 @@ getRunScript = [
 // @return returns true or false
 // @example getRunScriptSetting "autosorry"
 getRunScriptSetting = [
+	local noob_scriptName noob_indexMapData;
 	noob_scriptName = $arg1;
 	
 	noob_indexMapData = (getRunScript $noob_scriptName);
@@ -52,6 +56,7 @@ getRunScriptSetting = [
 // @return returns a shortcut for a key
 // @example getRunScriptKey "autosorry"
 getRunScriptKey = [
+	local noob_scriptName noob_indexMapData;
 	noob_scriptName = $arg1;
 	
 	noob_indexMapData = (getRunScript $noob_scriptName);
@@ -65,6 +70,7 @@ getRunScriptKey = [
 // @return returns a cubescript list with all options
 // @example getRunScriptOptions "autosorry"
 getRunScriptOptions = [
+	local noob_scriptName noob_indexMapData;
 	noob_scriptName = $arg1;
 	
 	noob_indexMapData = (getRunScript $noob_scriptName);
@@ -79,6 +85,7 @@ getRunScriptOptions = [
 // @return Returns the one options value which you are need
 // @example getRunScriptSpecificOptions [sayto "team" srymsg "Sorry for that teamkill"] "srymsg"
 getRunScriptSpecificOptions = [
+	local noob_runScriptOptions noob_runScriptIndex indexRunScriptOptions;
 	noob_runScriptOptions = $arg1; // The options list (poor "array" xD)
 	noob_runScriptIndex = $arg2; // You want this one option
 	
@@ -95,6 +102,8 @@ getRunScriptSpecificOptions = [
 // @return 
 // @example ifActiveBindKey "statsprinter" "print_stats"
 ifActiveBindKey = [
+	local noob_scriptName noob_scriptAction noob_keyKind noob_scriptStatus noob_scriptKey;
+	
 	noob_scriptName = $arg1;
 	noob_scriptAction = $arg2;
 	noob_keyKind = $arg3; // optional
@@ -125,6 +134,8 @@ ifActiveBindKey = [
 // @return 
 // @example bindKey "statsprinter" "print_stats"
 bindKey = [
+	local noob_scriptName noob_scriptAction noob_keyKind noob_scriptKey;
+	
 	noob_scriptName = $arg1;
 	noob_scriptAction = $arg2;
 	noob_keyKind = $arg3; // optional
@@ -143,6 +154,8 @@ bindKey = [
 
 // Only bind a key if the user have set one key in the script options
 bindOptionalKey = [
+	local noob_scriptName noob_scriptAction noob_keyKind noob_scriptKey;
+
 	noob_scriptName = $arg1;
 	noob_scriptAction = $arg2;
 	noob_keyKind = $arg3; // optional
@@ -168,6 +181,8 @@ bindOptionalKey = [
 // @arg2 the command which should be setted right now
 // @arg3 the command which will be bind if the condition is given
 createBindIf = [
+	local noob_aKey noob_aKeyAction noob_newBindCommand noob_actionOfAKey;
+	
 	noob_aKey = $arg1;
 	noob_aKeyAction = $arg2;
 	noob_newBindCommand = $arg3;
@@ -181,6 +196,8 @@ createBindIf = [
 
 // Count up
 counterProgress = [
+	local noob_CounterNameProgress;
+	
 	noob_CounterNameProgress = $arg1;
 	
 	sleep (getalias (concatword "noob_CounterInterval_" $noob_CounterNameProgress)) [
@@ -195,6 +212,8 @@ counterProgress = [
 
 // Starts a counter
 counterStart = [
+	local noob_uniqueCounterName noob_counterInterval;
+	
 	noob_uniqueCounterName = $arg1;
 	noob_counterInterval = $arg2;
 	
@@ -207,6 +226,8 @@ counterStart = [
 
 // Stops a counter
 counterStop = [
+	local noob_uniqueCounterName;
+	
 	noob_uniqueCounterName = $arg1;
 
 	(concatword "noob_CounterStatus_" $noob_uniqueCounterName) = 0;
@@ -216,6 +237,8 @@ counterStop = [
 
 // Get the value of a counter
 counterGet = [
+	local noob_uniqueCounterName;
+	
 	noob_uniqueCounterName = $arg1;
 	
 	result (getalias (concatword "noob_Counter_" $noob_uniqueCounterName));
@@ -223,6 +246,8 @@ counterGet = [
 
 // Resets a counter
 counterReset = [
+	local noob_uniqueCounterName noob_newcounterInterval;
+	
 	noob_uniqueCounterName = $arg1;
 	noob_newcounterInterval = $arg2; // optional
 	
@@ -234,6 +259,8 @@ counterReset = [
 
 // Returns 1 (= true) if the mode is a teammode, -1 for false
 isTeammode = [
+	local noob_checkMode noob_teammodes;
+	
 	noob_checkMode = $arg1;
 	
 	noob_teammodes = [2 4 6 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22];
@@ -292,8 +319,6 @@ if (! (strcmp (getalias (concatword "nslFirstStartV" $nslVersion)) "1")) [
 					guibutton "editing.." "showgui editing"
 				]
 				guibutton "vote game mode / map.." "showgui gamemode"
-				// guibutton "lanconnect"
-				// guibutton "connect localhost"
 				guibutton "switch team" [if (strcmp (getteam) "good") [team evil] [team good]]
 				guibutton "toggle spectator" [spectator (! (isspectator (getclientnum)))] "spectator"
 				guibutton "master.." [showgui master]
