--- a/packages/scripts/nooby/noobpro.cfg
+++ b/packages/scripts/nooby/noobpro.cfg
@@ -5,24 +5,48 @@ noobpro_scriptStatus = (getRunScriptSetting "noobpro");
 // Is the script active?
 if (= (strcmp $noobpro_scriptStatus "false") 0) [
 	noobpro = [
-		noobpro_param = $alg1;
+		local noobpro_param;
 		
-		if (= $noobpro_param "reset") [
-			disconnect
-			texreduce 0
-			fullbrightmodels 60
-			waterrefract 1
-			sleep 1000 [
-				reconnect
-			]
+		noobpro_param = $arg1;
+		
+		nInit noobpro_texreduceSetting 12
+		nInit noobpro_texreduceBackup 0
+		
+		nInit noobpro_fullbrightmodelsSetting 200
+		nInit noobpro_fullbrightmodelsBackup 60
+		
+		nInit noobpro_waterrefractSetting 0
+		nInit noobpro_waterrefractBackup 1
+
+		if (strcmp $noobpro_param "reset") [
+			//disconnect
+			texreduce noobpro_texreduceBackup;
+			fullbrightmodels noobpro_fullbrightmodelsBackup;
+			waterrefract noobpro_waterrefractBackup;
+			// sleep 1000 [
+				// reconnect
+			// ]
 		][
-			disconnect
-			texreduce 12
-			fullbrightmodels 200
-			waterrefract 0
-			sleep 1000 [
-				reconnect
+			//disconnect
+			
+			noobpro_texreduceBackup = $texreduce;
+			noobpro_fullbrightmodelsBackup = $fullbrightmodels;
+			noobpro_waterrefractBackup = $waterrefract;
+			
+			if (! (strcmp $texreduce noobpro_texreduceSetting)) [
+				texreduce 12
 			]
+			
+			if (! (strcmp $fullbrightmodels noobpro_fullbrightmodelsSetting)) [
+				fullbrightmodels 200
+			]
+			
+			if (! (strcmp $waterrefract noobpro_waterrefractSetting)) [
+				waterrefract 0
+			]
+			// sleep 1000 [
+				// reconnect
+			// ]
 		]
 	]
 ]
