make it possible to disable outlaw scripts

--- a/packages/scripts/nooblib.cfg
+++ b/packages/scripts/nooblib.cfg
@@ -21,6 +21,20 @@ execdirs = [
 	]
 ]
 
+
+// run outlaw scripts
+exec_outlaw = [
+	local dir;
+	dir = "packages/scripts/outlaw";
+	
+	loopfiles f $dir cfg [	
+		if (! (strcmp (getRunScriptSetting (concatword $f ".cfg")) "false")) [
+			file = (format "%1/%2.cfg" $dir $f); 
+			exec $file;
+		]
+ 	]	
+]
+
 /////////////////////////////////////////////////////
 // Get the index of a script in the settings list
 // @group runScript
@@ -46,7 +60,12 @@ getRunScriptSetting = [
 	noob_scriptName = $arg1;
 	
 	noob_indexMapData = (getRunScript $noob_scriptName);
-	result (at $runScript (+ $noob_indexMapData 1));
+	
+	if (= $noob_indexMapData -1) [
+		result "true";
+	][
+		result (at $runScript (+ $noob_indexMapData 1));
+	]
 ]
 
 /////////////////////////////////////////////////////
