--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -25,7 +25,7 @@
 		noobysraceroptions true F6 []
 		noobysrules true [] []
 		noobautosorry true [] [ sayto "team" // "all" or "team"
-								srymsg "Sorry for the teamkill!" ]
+								srymsg "Sorry for the teamkill mate!" ]
 		noobafk true F9 [ 	// If a key for a bind is given, you can use the key to go in spec and add your afkTag to your name; undo with the same key
 							// If the auto afk put you in spec, its enough to press one of your "move"-keys or if you type something in the chat or attack 
 							// ! IMPORTANT: After you changed your keys, you need to restart sauer or the afk script can't work correctly!
@@ -34,11 +34,16 @@
 							autoAfk "true" // true or false
 							secondsAutoAfk 600 // seconds until you get auto spec + "afk" rename, minimum 30 seconds
 						]
-		zombiemenu false KP9 []
+						
+		zombie.cfg true [] []
+		bratensouce.cfg false [] []
 	]
 
 	exec "packages/scripts/nooblib.cfg"
 	
+	
 	exec "authkeys.cfg"; // My personal authkeys at a secure place :)
 	
 	execdirs ["packages/scripts/nooby" "packages/scripts/somedude" "packages/scripts/neo" "./cfg/"]; // you can add your dir to the list
+	
+	exec_outlaw
