change default sorry message for a teamkill

--- a/packages/scripts/nooby/noobautosorry.cfg
+++ b/packages/scripts/nooby/noobautosorry.cfg
@@ -19,7 +19,7 @@ if (= (strcmp $noobautosorry_scriptStatus "false") 0) [
 		noobautosorry_srymsg = (getRunScriptSpecificOptions $noobautosorry_options "srymsg");
 		
 		if (strcmp $noobautosorry_srymsg "") [
-			noobautosorry_srymsg = "Sorry for that teamkill!";
+			noobautosorry_srymsg = "Sorry for that teamkill mate!";
 		]
 
 	// You did a teamkill? Shame on you!
