add exec_nsl function
add exec_nsl function to set the settings for the scripts

--- a/packages/scripts/nooblib.cfg
+++ b/packages/scripts/nooblib.cfg
@@ -1,4 +1,5 @@
 nslVersion = "0.8";
+nslSettings = [];
 
 // Executes all scripts in a dir
 execdir = [
@@ -21,6 +22,10 @@ execdirs = [
 	]
 ]
 
+// init the nsl
+exec_nsl = [
+	nslSettings = $arg1;
+]
 
 // run outlaw scripts
 exec_outlaw = [
@@ -45,7 +50,7 @@ getRunScript = [
 	local noob_scriptName;
 	noob_scriptName = $arg1;
 	
-	result (indexof $runScript $noob_scriptName);
+	result (indexof $nslSettings $noob_scriptName);
 ]
 
 
@@ -64,7 +69,7 @@ getRunScriptSetting = [
 	if (= $noob_indexMapData -1) [
 		result "true";
 	][
-		result (at $runScript (+ $noob_indexMapData 1));
+		result (at $nslSettings (+ $noob_indexMapData 1));
 	]
 ]
 
@@ -79,7 +84,7 @@ getRunScriptKey = [
 	noob_scriptName = $arg1;
 	
 	noob_indexMapData = (getRunScript $noob_scriptName);
-	result (at $runScript (+ $noob_indexMapData 2));
+	result (at $nslSettings (+ $noob_indexMapData 2));
 ]
 
 /////////////////////////////////////////////////////
@@ -93,7 +98,7 @@ getRunScriptOptions = [
 	noob_scriptName = $arg1;
 	
 	noob_indexMapData = (getRunScript $noob_scriptName);
-	result (at $runScript (+ $noob_indexMapData 3));
+	result (at $nslSettings (+ $noob_indexMapData 3));
 ]
 
 /////////////////////////////////////////////////////
