improve directory tree
added nsl dir for scripts which are made to run with the nooblib; add
"nsl_" as a prefix in the filenames for the readme.txt and the
changelog.txt to prevent overwritings

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -44,6 +44,6 @@
 		texmenu.cfg true [] []
 	]
 	
-	execdirs ["packages/scripts/nooby" "packages/scripts/neo" "./cfg/"]; // you can add your dir to the list
+	execdirs ["packages/scripts/nsl/nooby" "packages/scripts/nsl/neo" "./cfg/"]; // you can add your dir to the list
 
 	exec_outlaw
