--- a/packages/scripts/nsl/nooby/noobauth.cfg
+++ b/packages/scripts/nsl/nooby/noobauth.cfg
@@ -2,6 +2,11 @@ noobysauth_authed = 0;
 
 noobauth = [
 	if (= $noobysauth_authed 0) [
+	
+		if (= (getmastermode) 0) [
+			setmaster 1;
+		]
+		
 		sauth;
 		noobysauth_authed = 1;
 	][
