noobpro: graphic settings now really configurable

--- a/packages/scripts/nsl/nooby/noobpro.cfg
+++ b/packages/scripts/nsl/nooby/noobpro.cfg
@@ -3,7 +3,7 @@ noobpro_scriptStatus = (getRunScriptSetting "noobpro");
 // End if init settings
 
 // Is the script active?
-if (= (strcmp $noobpro_scriptStatus "false") 0) [
+if (! (strcmp $noobpro_scriptStatus "false")) [
 	noobpro = [
 		local noobpro_param;
 		
@@ -31,15 +31,15 @@ if (= (strcmp $noobpro_scriptStatus "false") 0) [
 			noobpro_waterrefractBackup = $waterrefract;
 			
 			if (! (strcmp $texreduce noobpro_texreduceSetting)) [
-				texreduce 12
+				texreduce $noobpro_texreduceSetting
 			]
 			
 			if (! (strcmp $fullbrightmodels noobpro_fullbrightmodelsSetting)) [
-				fullbrightmodels 200
+				fullbrightmodels $noobpro_fullbrightmodelsSetting
 			]
 			
 			if (! (strcmp $waterrefract noobpro_waterrefractSetting)) [
-				waterrefract 0
+				waterrefract $noobpro_waterrefractSetting
 			]
 
 		]
