add math functions ++ and --
added: maths functions: ++ and -- ; they are sum or subtract 1 to a var;
example: ++ i

--- a/packages/scripts/nooblib.cfg
+++ b/packages/scripts/nooblib.cfg
@@ -308,6 +308,23 @@ isTeammode = [
 	]
 ////////////////////////////////////////////////////
 
+
+"++" = [
+	if (= (nIsDef $arg1) 1) [
+		alias $arg1 (+ (getalias $arg1) 1);
+	][
+		alias $arg1 1;
+	]
+]
+
+"--" = [
+	if (= (nIsDef $arg1) 1) [
+		alias $arg1 (- (getalias $arg1) 1);
+	][
+		alias $arg1 -1;
+	]
+]
+
 // Check first start after installation or updating the NSL
 if (! (strcmp (getalias (concatword "nslFirstStartV" $nslVersion)) "1")) [
 	
