fix init bug in znoobysccpack

--- a/packages/scripts/nsl/nooby/znoobysccpack.cfg
+++ b/packages/scripts/nsl/nooby/znoobysccpack.cfg
@@ -3,7 +3,7 @@
 // This little extension itself is licensed under the terms of CC-BY-SA 4.0
 // Have fun with it - Nooby
 
-if (>= $zVersion "3.2") [ 
+if (&& (= (nIsDef zVersion) 1) (>= $zVersion "3.2")) [ 
 	zAddLicense ["CC-BYv4" ["Creative Commons - BY 4.0"]] ["licenseCC-BYv4_Short_EN" "CC-BY 4.0: You are allowed to use the work in every way you like as long as your credit the author(s)." "licenseCC-BYv4_More_EN" "If you want to know more about this license go to https://creativecommons.org/licenses/by/4.0/"]
 	zAddLicense ["CC-BY-SAv4" ["Creative Commons - BY SA 4.0"]] ["licenseCC-BY-SAv4_Short_EN" "CC-BY-SA 4.0: You are allowed to use the work in every way you like as long as your credit the author(s) and you don't modify the license terms for your work which is based at this work." "licenseCC-BY-SAv4_More_EN" "If you want to know more about this license go to https://creativecommons.org/licenses/by-sa/4.0/"]
 ][
