remove redundant code from nooblib
remove redundant code from the bind functions

--- a/packages/scripts/nooblib.cfg
+++ b/packages/scripts/nooblib.cfg
@@ -135,17 +135,9 @@ ifActiveBindKey = [
 	noob_scriptStatus = (getRunScriptSetting $noob_scriptName);
 	
 	if (strcmp $noob_scriptStatus "true") [
+	
+		bindKey $noob_scriptName $noob_scriptAction $noob_keyKind;
 		
-		noob_scriptKey = (getRunScriptKey $noob_scriptName);
-		if (strcmp $noob_keyKind "editbind") [
-			editbind $noob_scriptKey $noob_scriptAction;
-		][
-			if (strcmp $noob_keyKind "specbind") [
-				specbind $noob_scriptKey $noob_scriptAction;
-			][
-				bind $noob_scriptKey $noob_scriptAction;
-			]
-		]
 	]
 ]
 
@@ -186,17 +178,13 @@ bindOptionalKey = [
 	
 	noob_scriptKey = (getRunScriptKey $noob_scriptName);
 	if (strcmp $noob_scriptKey []) [
+	
 		result "false";
+		
 	][
-		if (strcmp $noob_keyKind "editbind") [
-			editbind $noob_scriptKey $noob_scriptAction;
-		][
-			if (strcmp $noob_keyKind "specbind") [
-				specbind $noob_scriptKey $noob_scriptAction;
-			][
-				bind $noob_scriptKey $noob_scriptAction;
-			]
-		]
+	
+		bindKey $noob_scriptName $noob_scriptAction $noob_keyKind;
+		
 	]
 ]
 
