noobpro: enable hidedead

--- a/packages/scripts/nsl/nooby/noobpro.cfg
+++ b/packages/scripts/nsl/nooby/noobpro.cfg
@@ -15,19 +15,29 @@ if (! (strcmp $noobpro_scriptStatus "false")) [
 		nInit noobpro_fullbrightmodelsSetting 200
 		nInit noobpro_fullbrightmodelsBackup 60
 		
+		nInit noobpro_waterreflectSetting 0
+		nInit noobpro_waterreflectBackup 1
+		
 		nInit noobpro_waterrefractSetting 0
 		nInit noobpro_waterrefractBackup 1
-
+		
+		nInit noobpro_hidedeadSetting 1
+		nInit noobpro_hidedeadBackup 0
+		
+		
 		if (strcmp $noobpro_param "reset") [
 
 			texreduce noobpro_texreduceBackup;
 			fullbrightmodels noobpro_fullbrightmodelsBackup;
+			waterreflect noobpro_waterreflectBackup;
 			waterrefract noobpro_waterrefractBackup;
+			hidedead noobpro_hidedeadBackup;
 
 		][
 
 			noobpro_texreduceBackup = $texreduce;
 			noobpro_fullbrightmodelsBackup = $fullbrightmodels;
+			noobpro_waterreflectBackup = $waterreflect;
 			noobpro_waterrefractBackup = $waterrefract;
 			
 			if (! (strcmp $texreduce noobpro_texreduceSetting)) [
@@ -38,10 +48,18 @@ if (! (strcmp $noobpro_scriptStatus "false")) [
 				fullbrightmodels $noobpro_fullbrightmodelsSetting
 			]
 			
+			if (! (strcmp $waterreflect noobpro_waterreflectSetting)) [
+				waterreflect $noobpro_waterreflectSetting
+			]
+			
 			if (! (strcmp $waterrefract noobpro_waterrefractSetting)) [
 				waterrefract $noobpro_waterrefractSetting
 			]
-
+			
+			if (! (strcmp $hidedead noobpro_hidedeadSetting)) [
+				hidedead $noobpro_hidedeadSetting
+			]
+		
 		]
 	]
 ]
