nooblib: declare more vars as local

--- a/packages/scripts/nooblib.cfg
+++ b/packages/scripts/nooblib.cfg
@@ -3,7 +3,7 @@ nslSettings = [];
 
 // Executes all scripts in a dir
 execdir = [
-	local dir;
+	local dir file;
 	dir = $arg1;
 	
 	loopfiles f $dir cfg [		
@@ -14,7 +14,7 @@ execdir = [
 
 // Executes all scripts in all dirs of a list
 execdirs = [
-	local noob_executeDirs;
+	local noob_executeDirs noobexecdirs_dir;
 	noob_executeDirs = $arg1;
 	
 	looplist noobexecdirs_dir $noob_executeDirs [
@@ -29,7 +29,7 @@ exec_nsl = [
 
 // run outlaw scripts
 exec_outlaw = [
-	local dir;
+	local dir f file;
 	dir = "packages/scripts/outlaw";
 	
 	loopfiles f $dir cfg [	
