update todo + very small code improvements

--- a/packages/scripts/nsl/nooby/noobafk.cfg
+++ b/packages/scripts/nsl/nooby/noobafk.cfg
@@ -115,7 +115,7 @@ noobafk_scriptStatus = (getRunScriptSetting "noobafk");
 // End if init settings
 
 // Is the script active?
-if (= (strcmp $noobafk_scriptStatus "false") 0) [
+if (=s $noobafk_scriptStatus "true") [
 	noobafk_do = [
 		if (&& (!= $noobafk_isAutoAfk 1) (!= $noobafk_didIt 1)) [
 			// Don't spec in coop mode.
@@ -208,7 +208,7 @@ if (= (strcmp $noobafk_scriptStatus "false") 0) [
 	// Manually AFK-Function
 	noobafk_keyPress = [
 		if (= (isconnected) 1) [
-			//if (= (isspectator (getclientnum (getname))) 1) [
+
 			if (= $noobafk_didIt 1) [
 				noobafk_undo;
 				noobafk_didIt = 0;
