--- a/packages/scripts/nsl/nooby/noobauth.cfg
+++ b/packages/scripts/nsl/nooby/noobauth.cfg
@@ -1,17 +1,17 @@
-noobysauth_authed = 0;
+noobauth_authed = 0;
 
 noobauth = [
-	if (= $noobysauth_authed 0) [
+	if (= $noobauth_authed 0) [
 	
 		if (= (getmastermode) 0) [
 			setmaster 1;
 		]
 		
 		sauth;
-		noobysauth_authed = 1;
+		noobauth_authed = 1;
 	][
 		setmaster 0;
-		noobysauth_authed = 0;
+		noobauth_authed = 0;
 	]
 ]
 
