--- a/packages/scripts/nsl/nooby/noobautosorry.cfg
+++ b/packages/scripts/nsl/nooby/noobautosorry.cfg
@@ -1,6 +1,6 @@
 noobautosorry_scriptStatus = (getRunScriptSetting "noobautosorry");
 
-if (= (strcmp $noobautosorry_scriptStatus "false") 0) [
+if (=s $noobautosorry_scriptStatus "true") [
 
 	// Load the script options
 		
