--- a/packages/scripts/nsl/nooby/noobexplain.cfg
+++ b/packages/scripts/nsl/nooby/noobexplain.cfg
@@ -41,7 +41,7 @@ noobexplainations_translate_de = [
 
 ]
 
-if (= (strcmp $noobafk_scriptStatus "false") 0) [
+if (=s $noobafk_scriptStatus "true") [
 	explain = [
 		noobexplain_id = $arg1;
 		
@@ -70,5 +70,7 @@ if (= (strcmp $noobafk_scriptStatus "false") 0) [
 		]
 	]
 ][
-	explain = [];
+	// Script is disable, overwrite function and list so they get removed from the config.cfg
+	explain = "";
+	noobexplainations = "";
 ]
