--- a/packages/scripts/nsl/nooby/noobpro.cfg
+++ b/packages/scripts/nsl/nooby/noobpro.cfg
@@ -3,7 +3,7 @@ noobpro_scriptStatus = (getRunScriptSetting "noobpro");
 // End if init settings
 
 // Is the script active?
-if (! (strcmp $noobpro_scriptStatus "false")) [
+if (=s $noobpro_scriptStatus "true") [
 	noobpro = [
 		local noobpro_param;
 		
