--- a/packages/scripts/nsl/nooby/noobysraceroptions.cfg
+++ b/packages/scripts/nsl/nooby/noobysraceroptions.cfg
@@ -1,6 +1,6 @@
-noobracer_scriptStatus = (getRunScriptSetting "noobysraceroptions");
+noobysracer_scriptStatus = (getRunScriptSetting "noobysraceroptions");
 
-if (= (strcmp $noobracer_scriptStatus "false") 0) [
+if (=s $noobysracer_scriptStatus "true") [
 	newgui NoobRacer [
 		guistayopen [  
 			guilist [	
