--- a/packages/scripts/nsl/nooby/noobysrules.cfg
+++ b/packages/scripts/nsl/nooby/noobysrules.cfg
@@ -1,6 +1,6 @@
-noobrules_scriptStatus = (getRunScriptSetting "noobysrules");
+noobysrules_scriptStatus = (getRunScriptSetting "noobysrules");
 
-if (= (strcmp $noobrules_scriptStatus "false") 0) [
+if (=s $noobysrules_scriptStatus "true") [
 	// General Rules:
 	bind "KP1" [say "^f0[ Rule #1 ] ^f2Type /getmap to get the map!"]
 	bind "KP2" [say "^f0[ Rule #2 ] ^f2Don't edit the maps."]
