--- a/packages/scripts/nsl/nooby/statsprinter.cfg
+++ b/packages/scripts/nsl/nooby/statsprinter.cfg
@@ -1,6 +1,6 @@
 statsprinter_scriptStatus = (getRunScriptSetting "statsprinter");
 
-if (strcmp $statsprinter_scriptStatus "true") [
+if (=s $statsprinter_scriptStatus "true") [
 	round = [
 		local split;
 		
