--- a/packages/scripts/nsl/nooby/noobservers.cfg
+++ b/packages/scripts/nsl/nooby/noobservers.cfg
@@ -1,12 +1,12 @@
 noobservers_scriptStatus = (getRunScriptSetting "noobservers");
 
-if (= (strcmp $noobservers_scriptStatus "false") 0) [
+if (=s $noobservers_scriptStatus "true") [
 	newgui Noobservers [
 		guistayopen [ 
 			guilist [	
 				guilist [
-					guibutton "Nooby's Paradise" [ if (strcmp $getname "Nooby") [ connect localhost; ][ connect game.noobys.org; ]] 
-					guibutton "Nooby's Nightly" [ if (strcmp $getname "Nooby") [ connect localhost 10010; ][ connect game.noobys.org; ]] 
+					guibutton "Nooby's Paradise" [ connect game.noobys.org; ] 
+					guibutton "Nooby's Nightly" [ connect game.noobys.org; ] 
 					guibutton "Outlawzone" [ connect nooblounge.net 10700; ] 
 					guibutton "Protest8" [ connect nooblounge.net 10777; ]
 					//guibutton "64b Fly" [ connect 64b.org 20000; ] 
