noobservers: fix connect

--- a/packages/scripts/nsl/nooby/noobservers.cfg
+++ b/packages/scripts/nsl/nooby/noobservers.cfg
@@ -6,7 +6,7 @@ if (=s $noobservers_scriptStatus "true") [
 			guilist [	
 				guilist [
 					guibutton "Nooby's Paradise" [ connect game.noobys.org; ] 
-					guibutton "Nooby's Nightly" [ connect game.noobys.org; ] 
+					guibutton "Nooby's Nightly" [ connect game.noobys.org 10010; ] 
 					guibutton "Outlawzone" [ connect nooblounge.net 10700; ] 
 					guibutton "Protest8" [ connect nooblounge.net 10777; ]
 					//guibutton "64b Fly" [ connect 64b.org 20000; ] 
