nooblib: improve getRunScriptSpecificOptions
getRunScriptSpecificOptions have a third optional parameter which you
can use to set default settings, the function results the default if
there isn't a setting saved; getRunScriptSpecificOptions results now -1
if there isn't any setting saved

--- a/packages/scripts/nooblib.cfg
+++ b/packages/scripts/nooblib.cfg
@@ -102,19 +102,30 @@ getRunScriptOptions = [
 ]
 
 /////////////////////////////////////////////////////
-// Returns a specific setting out of a settings list
+// Results a specific setting out of a settings list
 // @group runScript
 // @arg1 list with settings e.g. [optionName optionValue optionName2 optionValue2 ...]
 // @arg2 optionName
-// @return Returns the one options value which you are need
+// @arg3 default value, if there isn't a setting saved (optional)
+// @return Results the one options value which you are need
 // @example getRunScriptSpecificOptions [sayto "team" srymsg "Sorry for that teamkill"] "srymsg"
 getRunScriptSpecificOptions = [
-	local noob_runScriptOptions noob_runScriptIndex indexRunScriptOptions;
+	local noob_runScriptOptions noob_runScriptKey indexSpecificOption;
+
 	noob_runScriptOptions = $arg1; // The options list (poor "array" xD)
-	noob_runScriptIndex = $arg2; // You want this one option
+	noob_runScriptKey = $arg2; // You want this one option
 	
-	indexRunScriptOptions = (+ (indexof $noob_runScriptOptions $noob_runScriptIndex) 1);
-	result (at $noob_runScriptOptions $indexRunScriptOptions);
+	indexSpecificOption = (indexof $noob_runScriptOptions $noob_runScriptKey);
+	
+	if (= $indexSpecificOption -1) [
+		if (!=s $arg3 "") [
+			result $arg3;
+		][
+			result -1;
+		]
+	][
+		result (at $noob_runScriptOptions (+ $indexSpecificOption 1));
+	]
 ]
 
 /////////////////////////////////////////////////////
