use new parameter of getRunScriptSpecificOptions
make use of the default value parameter of getRunScriptSpecificOptions

--- a/packages/scripts/nsl/nooby/noobautosorry.cfg
+++ b/packages/scripts/nsl/nooby/noobautosorry.cfg
@@ -3,25 +3,20 @@ noobautosorry_scriptStatus = (getRunScriptSetting "noobautosorry");
 if (=s $noobautosorry_scriptStatus "true") [
 
 	// Load the script options
-		
 		noobautosorry_options = (getRunScriptOptions "noobautosorry");
 
 	// Say sorry to the team or to all players?
 		noobautosorry_sayToOption = (getRunScriptSpecificOptions $noobautosorry_options "sayto");
 	
-		if (strcmp $noobautosorry_sayToOption "all") [
+		if (=s $noobautosorry_sayToOption "all") [
 			alias noobautosorry_howTo say;
 		][
 			alias noobautosorry_howTo sayteam;
 		]
 
 	// Which message should be posted?
-		noobautosorry_srymsg = (getRunScriptSpecificOptions $noobautosorry_options "srymsg");
+		noobautosorry_srymsg = (getRunScriptSpecificOptions $noobautosorry_options "srymsg" "Sorry for that teamkill mate!");
 		
-		if (strcmp $noobautosorry_srymsg "") [
-			noobautosorry_srymsg = "Sorry for that teamkill mate!";
-		]
-
 	// You did a teamkill? Shame on you!
 	noob_autosorry = [
 			noobautosorry_lastMode = (getmode); 
@@ -30,8 +25,7 @@ if (=s $noobautosorry_scriptStatus "true") [
 			noobsautosorry_lastDeaths = (getdeaths); 
 		
 		sleep 250 [
-			if (&& (strcmp $noobautosorry_lastMode (getmode)) (strcmp $noobautosorry_lastMap (mapname))) [
-				//if (&& (&& (!= (getmode) -2) (!= (getmode) -3)) (&& (!= (getmode) -1) (!= (getmode) 1))) [
+			if (&& (=s $noobautosorry_lastMode (getmode)) (=s $noobautosorry_lastMap (mapname))) [
 				if (= (isTeammode (getmode)) 1) [
 					if (< (getfrags) $noobautosorry_lastFrags) [
 						
