--- a/packages/scripts/nsl/nooby/noobpro.cfg
+++ b/packages/scripts/nsl/nooby/noobpro.cfg
@@ -40,23 +40,23 @@ if (=s $noobpro_scriptStatus "true") [
 			noobpro_waterreflectBackup = $waterreflect;
 			noobpro_waterrefractBackup = $waterrefract;
 			
-			if (! (strcmp $texreduce noobpro_texreduceSetting)) [
+			if (!=s $texreduce noobpro_texreduceSetting) [
 				texreduce $noobpro_texreduceSetting
 			]
 			
-			if (! (strcmp $fullbrightmodels noobpro_fullbrightmodelsSetting)) [
+			if (!=s $fullbrightmodels noobpro_fullbrightmodelsSetting) [
 				fullbrightmodels $noobpro_fullbrightmodelsSetting
 			]
 			
-			if (! (strcmp $waterreflect noobpro_waterreflectSetting)) [
+			if (!=s $waterreflect noobpro_waterreflectSetting) [
 				waterreflect $noobpro_waterreflectSetting
 			]
 			
-			if (! (strcmp $waterrefract noobpro_waterrefractSetting)) [
+			if (!=s $waterrefract noobpro_waterrefractSetting) [
 				waterrefract $noobpro_waterrefractSetting
 			]
 			
-			if (! (strcmp $hidedead noobpro_hidedeadSetting)) [
+			if (!=s $hidedead noobpro_hidedeadSetting) [
 				hidedead $noobpro_hidedeadSetting
 			]
 		
