--- a/packages/scripts/nsl/nooby/noobafk.cfg
+++ b/packages/scripts/nsl/nooby/noobafk.cfg
@@ -5,32 +5,16 @@ noobafk_scriptStatus = (getRunScriptSetting "noobafk");
 
 // Init all Settings
 	// Settings: Tag
-	noobafk_afkTag = (getRunScriptSpecificOptions $noobafk_settings "afkTag");
+	noobafk_afkTag = (getRunScriptSpecificOptions $noobafk_settings "afkTag" ">AFK");
 	
-	if (strcmp $noobafk_afkTag "") [
-		noobafk_afkTag = ">AFK";
-	]
-		
 	// Settings: TagKind - Prefix or Suffix
-	noobafk_afkTagKind = (getRunScriptSpecificOptions $noobafk_settings "afkTagKind");
-	
-	if (strcmp $noobafk_afkTagKind "") [
-		noobafk_afkTagKind = "suffix";
-	]
+	noobafk_afkTagKind = (getRunScriptSpecificOptions $noobafk_settings "afkTagKind" "suffix");
 	
 	// Settings: autoAfk - Would you like to get auto spec + rename if you afk?
-	noobafk_autoAfk = (getRunScriptSpecificOptions $noobafk_settings "autoAfk");
-	
-	if (strcmp $noobafk_autoAfk "") [
-		noobafk_autoAfk = "true";
-	]
+	noobafk_autoAfk = (getRunScriptSpecificOptions $noobafk_settings "autoAfk" "true");
 	
 	// Settings: secondsAutoAfk - Seconds until you get autospec + "afk" rename, minimum 30 seconds
-	noobafk_secondsAutoAfk = (getRunScriptSpecificOptions $noobafk_settings "secondsAutoAfk");
-	
-	if (strcmp $noobafk_secondsAutoAfk "") [
-		noobafk_secondsAutoAfk = 80;
-	]
+	noobafk_secondsAutoAfk = (getRunScriptSpecificOptions $noobafk_settings "secondsAutoAfk" 80);
 	
 	if (< $noobafk_secondsAutoAfk 30) [
 		noobafk_secondsAutoAfk = 30;
@@ -61,49 +45,49 @@ noobafk_scriptStatus = (getRunScriptSetting "noobafk");
 	nInit noobafk_keyMsgStore "";
 	
 	
-	if (strcmp $noobafk_keyForward "") [
+	if (=s $noobafk_keyForward "") [
 		noobafk_keyForward = $noobafk_keyForwardStore
 	][
 		createBindIf $noobafk_keyForwardStore  "forward; noobafk_resetAutoAfkCounter;" "forward"
 		noobafk_keyForwardStore = $noobafk_keyForward;
 	]
 	
-	if (strcmp $noobafk_keyLeft "") [
+	if (=s $noobafk_keyLeft "") [
 		noobafk_keyLeft = $noobafk_keyLeftStore;
 	][
 		createBindIf $noobafk_keyLeftStore  "left; noobafk_resetAutoAfkCounter;" "left"
 		noobafk_keyLeftStore = $noobafk_keyLeft;
 	]
 	
-	if (strcmp $noobafk_keyRight "") [
+	if (=s $noobafk_keyRight "") [
 		noobafk_keyRight = $noobafk_keyRightStore;
 	][
 		createBindIf $noobafk_keyRightStore  "right; noobafk_resetAutoAfkCounter;" "right"
 		noobafk_keyRightStore = $noobafk_keyRight;
 	]
 	
-	if (strcmp $noobafk_keyDown "") [
+	if (=s $noobafk_keyDown "") [
 		noobafk_keyDown = $noobafk_keyDownStore
 	][
 		createBindIf $noobafk_keyDownStore  "backward; noobafk_resetAutoAfkCounter;" "backward"
 		noobafk_keyDownStore = $noobafk_keyDown;
 	]
 	
-	if (strcmp $noobafk_keyAttack "") [
+	if (=s $noobafk_keyAttack "") [
 		noobafk_keyAttack = $noobafk_keyAttackStore;
 	][
 		createBindIf $noobafk_keyAttackStore  "attack; noobafk_resetAutoAfkCounter;" "attack"
 		noobafk_keyAttackStore = $noobafk_keyAttack;
 	]
 	
-	if (strcmp $noobafk_keyJump "") [
+	if (=s $noobafk_keyJump "") [
 		noobafk_keyJump = $noobafk_keyJumpStore;
 	][
 		createBindIf $noobafk_keyJumpStore  "jump; noobafk_resetAutoAfkCounter;" "jump"
 		noobafk_keyJumpStore = $noobafk_keyJump;
 	]
 	
-	if (strcmp $noobafk_keyMsg "") [
+	if (=s $noobafk_keyMsg "") [
 		noobafk_keyMsg = $noobafk_keyMsgStore;
 	][
 		createBindIf $noobafk_keyMsgStore  "saycommand; noobafk_resetAutoAfkCounter;" "saycommand"
@@ -125,11 +109,11 @@ if (=s $noobafk_scriptStatus "true") [
 			
 			nInit noobafk_restoreName "";
 			
-			if (strcmp $noobafk_restoreName "") [
+			if (=s $noobafk_restoreName "") [
 			
 				noobafk_restoreName = (getname);
 				
-				if (strcmp $noobafk_afkTagKind "prefix") [
+				if (=s $noobafk_afkTagKind "prefix") [
 					name (concatword $noobafk_afkTag $noobafk_restoreName);
 				][
 					name (concatword $noobafk_restoreName $noobafk_afkTag);
@@ -148,7 +132,7 @@ if (=s $noobafk_scriptStatus "true") [
 			name $noobafk_restoreName;
 			noobafk_restoreName = "";
 			
-			if (strcmp $noobafk_autoAfk "true") [
+			if (=s $noobafk_autoAfk "true") [
 				// Activate the auto afk again
 				counterReset "noobafkCounter";
 				noobafk_isAutoAfk = 0;
@@ -160,7 +144,7 @@ if (=s $noobafk_scriptStatus "true") [
 	
 
 	// Auto AFK-Function
-	if (strcmp $noobafk_autoAfk "true") [
+	if (=s $noobafk_autoAfk "true") [
 		counterStart "noobafkCounter" "1000";
 		
 		noobafk_autoAfkCheck = [
