improve nsl_is_script_enabled
rename getRunScriptSetting to nsl_is_script_enabled; add optional
parameter to nsl_is_script_enabled which sets the default value, is
getting used if there isn't a setting saved; make us of the new
parameter in the scripts

--- a/packages/scripts/nooblib.cfg
+++ b/packages/scripts/nooblib.cfg
@@ -33,7 +33,7 @@ exec_outlaw = [
 	dir = "packages/scripts/outlaw";
 	
 	loopfiles f $dir cfg [	
-		if (! (strcmp (getRunScriptSetting (concatword $f ".cfg")) "false")) [
+		if (! (strcmp (nsl_is_script_enabled (concatword $f ".cfg")) "false" )) [
 			file = (format "%1/%2.cfg" $dir $f); 
 			exec $file;
 		]
@@ -55,19 +55,25 @@ getRunScript = [
 
 
 /////////////////////////////////////////////////////
-// Returns if a script should be execute or not
-// @group runScript
+// Results if a script should be execute or not
+// @group nsl
 // @arg1 script name
-// @return returns true or false
-// @example getRunScriptSetting "autosorry"
-getRunScriptSetting = [
+// @arg2 default setting, used if there isn't a setting saved (optional)
+// @return results true or false
+// @example nsl_is_script_enabled "autosorry"
+nsl_is_script_enabled = [
 	local noob_scriptName noob_indexMapData;
+	
 	noob_scriptName = $arg1;
 	
 	noob_indexMapData = (getRunScript $noob_scriptName);
 	
 	if (= $noob_indexMapData -1) [
-		result "true";
+		if (!=s $arg2 "") [
+			result $arg2;
+		][
+			result "true";
+		]
 	][
 		result (at $nslSettings (+ $noob_indexMapData 1));
 	]
@@ -143,7 +149,7 @@ ifActiveBindKey = [
 	noob_scriptAction = $arg2;
 	noob_keyKind = $arg3; // optional
 	
-	noob_scriptStatus = (getRunScriptSetting $noob_scriptName);
+	noob_scriptStatus = (nsl_is_script_enabled $noob_scriptName);
 	
 	if (strcmp $noob_scriptStatus "true") [
 	
