--- a/packages/scripts/nsl/nooby/noobafk.cfg
+++ b/packages/scripts/nsl/nooby/noobafk.cfg
@@ -1,4 +1,4 @@
-noobafk_scriptStatus = (getRunScriptSetting "noobafk");
+noobafk_scriptStatus = (nsl_is_script_enabled "noobafk" "true");
 
 // Load the script settings
 	noobafk_settings = (getRunScriptOptions "noobafk");
