--- a/packages/scripts/nsl/nooby/noobautosorry.cfg
+++ b/packages/scripts/nsl/nooby/noobautosorry.cfg
@@ -1,4 +1,4 @@
-noobautosorry_scriptStatus = (getRunScriptSetting "noobautosorry");
+noobautosorry_scriptStatus = (nsl_is_script_enabled "noobautosorry" "true");
 
 if (=s $noobautosorry_scriptStatus "true") [
 
