--- a/packages/scripts/nsl/nooby/noobexplain.cfg
+++ b/packages/scripts/nsl/nooby/noobexplain.cfg
@@ -1,4 +1,4 @@
-noobexplain_scriptStatus = (getRunScriptSetting "noobexplain");
+noobexplain_scriptStatus = (nsl_is_script_enabled "noobexplain" "false");
 
 noobexplainations = [
 	"license"		 "License: A license manage what you allowed to do - under which terms something is allowed, and what is forbidden."
