--- a/packages/scripts/nsl/nooby/noobpro.cfg
+++ b/packages/scripts/nsl/nooby/noobpro.cfg
@@ -1,4 +1,4 @@
-noobpro_scriptStatus = (getRunScriptSetting "noobpro");
+noobpro_scriptStatus = (nsl_is_script_enabled "noobpro" "true");
 
 // End if init settings
 
