--- a/packages/scripts/nsl/nooby/noobservers.cfg
+++ b/packages/scripts/nsl/nooby/noobservers.cfg
@@ -1,4 +1,4 @@
-noobservers_scriptStatus = (getRunScriptSetting "noobservers");
+noobservers_scriptStatus = (nsl_is_script_enabled "noobservers" "true");
 
 if (=s $noobservers_scriptStatus "true") [
 	newgui Noobservers [
