--- a/packages/scripts/nsl/nooby/noobysraceroptions.cfg
+++ b/packages/scripts/nsl/nooby/noobysraceroptions.cfg
@@ -1,4 +1,4 @@
-noobysracer_scriptStatus = (getRunScriptSetting "noobysraceroptions");
+noobysracer_scriptStatus = (nsl_is_script_enabled "noobysraceroptions" "false");
 
 if (=s $noobysracer_scriptStatus "true") [
 	newgui NoobRacer [
