--- a/packages/scripts/nsl/nooby/noobysrules.cfg
+++ b/packages/scripts/nsl/nooby/noobysrules.cfg
@@ -1,4 +1,4 @@
-noobysrules_scriptStatus = (getRunScriptSetting "noobysrules");
+noobysrules_scriptStatus = (nsl_is_script_enabled "noobysrules" "false");
 
 if (=s $noobysrules_scriptStatus "true") [
 	// General Rules:
