--- a/packages/scripts/nsl/nooby/statsprinter.cfg
+++ b/packages/scripts/nsl/nooby/statsprinter.cfg
@@ -1,4 +1,4 @@
-statsprinter_scriptStatus = (getRunScriptSetting "statsprinter");
+statsprinter_scriptStatus = (nsl_is_script_enabled "statsprinter" "true");
 
 if (=s $statsprinter_scriptStatus "true") [
 	round = [
