only execute outlaw scripts if explicit enabled

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -26,7 +26,7 @@
 		noobauth true F12 []
 		noobysraceroptions true F6 []
 		noobysrules true [] []
-		noobautosorry true [] [ sayto "team" // "all" or "team"
+		noobautosorry true [] [sayto "team" // "all" or "team"
 								srymsg "Sorry for the teamkill mate!" ]
 		noobafk true F9 [ 	// If a key for a bind is given, you can use the key to go in spec and add your afkTag to your name; undo with the same key
 							// If the auto afk put you in spec, its enough to press one of your "move"-keys or if you type something in the chat or attack 
@@ -37,13 +37,13 @@
 							secondsAutoAfk 600 // seconds until you get auto spec + "afk" rename, minimum 30 seconds
 						]
 						
-		zombie.cfg true [] []
-		bratensouce.cfg false [] []
-		texmenu.cfg true [] []
+		outlaw/zombie.cfg true [] []
+		outlaw/texmenu.cfg true [] []
+		outlaw/bratensouce.cfg false [] []
 	]
 	
 	exec_outlaw
 	
-	execdirs ["packages/scripts/nsl/nooby" "packages/scripts/nsl/neo" "./cfg/"]; // you can add your dir to the list
+	execdirs ["packages/scripts/nsl/nooby" "./cfg/"]; 
 
 	
