--- a/packages/scripts/nooblib.cfg
+++ b/packages/scripts/nooblib.cfg
@@ -33,7 +33,7 @@ exec_outlaw = [
 	dir = "packages/scripts/outlaw";
 	
 	loopfiles f $dir cfg [	
-		if (! (strcmp (nsl_is_script_enabled (concatword $f ".cfg")) "false" )) [
+		if (!=s (nsl_is_script_enabled (concatword "outlaw/" $f ".cfg") "false") "false") [
 			file = (format "%1/%2.cfg" $dir $f); 
 			exec $file;
 		]
