--- a/packages/scripts/nooblib.cfg
+++ b/packages/scripts/nooblib.cfg
@@ -135,31 +135,7 @@ getRunScriptSpecificOptions = [
 ]
 
 /////////////////////////////////////////////////////
-// Checks (in the settings) if the scripts get executed, if true then it will create a bind
-// @group bindKey
-// @arg1 script name
-// @arg2 script function which will be bind to the key
-// @arg3 optional - kind of the bind - have to be bind (default), editbind or specbind
-// @return 
-// @example ifActiveBindKey "statsprinter" "print_stats"
-ifActiveBindKey = [
-	local noob_scriptName noob_scriptAction noob_keyKind noob_scriptStatus noob_scriptKey;
-	
-	noob_scriptName = $arg1;
-	noob_scriptAction = $arg2;
-	noob_keyKind = $arg3; // optional
-	
-	noob_scriptStatus = (nsl_is_script_enabled $noob_scriptName);
-	
-	if (strcmp $noob_scriptStatus "true") [
-	
-		bindKey $noob_scriptName $noob_scriptAction $noob_keyKind;
-		
-	]
-]
-
-/////////////////////////////////////////////////////
-// Same  as "ifActiveBindKey" without the check if the script gets execute 
+// Binds the setted key (in the settings) with a specific function
 // @group bindKey
 // @arg1 script name
 // @arg2 script function which will be bind to the key
@@ -174,16 +150,42 @@ bindKey = [
 	noob_keyKind = $arg3; // optional
 	
 	noob_scriptKey = (getRunScriptKey $noob_scriptName);
-	if (strcmp $noob_keyKind "editbind") [
+	if (=s $noob_keyKind "editbind") [
 		editbind $noob_scriptKey $noob_scriptAction;
 	][
-		if (strcmp $noob_keyKind "specbind") [
+		if (=s $noob_keyKind "specbind") [
 			specbind $noob_scriptKey $noob_scriptAction;
 		][
 			bind $noob_scriptKey $noob_scriptAction;
 		]
 	]
 ]
+
+/////////////////////////////////////////////////////
+// Checks if the script is enabled, if true then it will create a bind
+// @group bindKey
+// @arg1 script name
+// @arg2 script function which will be bind to the key
+// @arg3 optional - kind of the bind - have to be bind (default), editbind or specbind
+// @return 
+// @example nsl_bind_key_if_script_enabled "statsprinter" "print_stats"
+nsl_bind_key_if_script_enabled = [
+	local noob_scriptName noob_scriptAction noob_keyKind noob_scriptStatus noob_scriptKey;
+	
+	noob_scriptName = $arg1;
+	noob_scriptAction = $arg2;
+	noob_keyKind = $arg3; // optional
+	
+	noob_scriptStatus = (nsl_is_script_enabled $noob_scriptName);
+	
+	if (=s $noob_scriptStatus "true") [
+	
+		bindKey $noob_scriptName $noob_scriptAction $noob_keyKind;
+		
+	]
+]
+
+ifActiveBindKey = [ echo (concat $arg1 "still use ifActiveBindKey"); ]
 
 // Only bind a key if the user have set one key in the script options
 bindOptionalKey = [
