--- a/packages/scripts/nsl/nooby/easygetmap.cfg
+++ b/packages/scripts/nsl/nooby/easygetmap.cfg
@@ -7,4 +7,4 @@ noob_easyGetMap = [
 	]
 ]
 
-ifActiveBindKey "noobeasygetmap" "noob_easyGetMap";
+nsl_bind_key_if_script_enabled "noobeasygetmap" "noob_easyGetMap";
