improved nsl_bind_key_if_script_enabled
add optional parameter to nsl_bind_key_if_script_enabled; should the key
gets the bind even there isn't a setting if the script gets executed or
not?

--- a/packages/scripts/nooblib.cfg
+++ b/packages/scripts/nooblib.cfg
@@ -167,16 +167,18 @@ bindKey = [
 // @arg1 script name
 // @arg2 script function which will be bind to the key
 // @arg3 optional - kind of the bind - have to be bind (default), editbind or specbind
+// @arg4 optional - should the key get the bind even there isn't a setting if the script gets executed or now?
 // @return 
 // @example nsl_bind_key_if_script_enabled "statsprinter" "print_stats"
 nsl_bind_key_if_script_enabled = [
-	local noob_scriptName noob_scriptAction noob_keyKind noob_scriptStatus noob_scriptKey;
+	local noob_scriptName noob_scriptAction noob_keyKind noob_scriptStatus nslDefaultEnabledState;
 	
 	noob_scriptName = $arg1;
 	noob_scriptAction = $arg2;
 	noob_keyKind = $arg3; // optional
+	nslDefaultEnabledState = $arg4; // optional
 	
-	noob_scriptStatus = (nsl_is_script_enabled $noob_scriptName);
+	noob_scriptStatus = (nsl_is_script_enabled $noob_scriptName $nslDefaultEnabledState);
 	
 	if (=s $noob_scriptStatus "true") [
 	
@@ -196,7 +198,7 @@ bindOptionalKey = [
 	noob_keyKind = $arg3; // optional
 	
 	noob_scriptKey = (getRunScriptKey $noob_scriptName);
-	if (strcmp $noob_scriptKey []) [
+	if (=s $noob_scriptKey []) [
 	
 		result "false";
 		
