execute all subdirs within the nsl dir
no need anymore to declare the nsl directories in the autoexec.cfg

--- a/packages/scripts/nooblib.cfg
+++ b/packages/scripts/nooblib.cfg
@@ -3,13 +3,21 @@ nslSettings = [];
 
 // Executes all scripts in a dir
 execdir = [
-	local dir file;
+	local dir file subfolders;
 	dir = $arg1;
+	subfolders = $arg2; // optional
 	
-	loopfiles f $dir cfg [		
+	loopfiles f $dir cfg [	
 		file = (format "%1/%2.cfg" $dir $f); 
 		exec $file;
  	]	
+	
+	if (=s $subfolders "true") [ //! find a solution how to only loop over directories
+		loopfiles f $dir "" [	
+			file = (format "%1/%2" $dir $f); 
+			execdir $file;
+		]	
+	]
 ]
 
 // Executes all scripts in all dirs of a list
@@ -23,8 +31,13 @@ execdirs = [
 ]
 
 // init the nsl
-exec_nsl = [
+nsl_init = [
 	nslSettings = $arg1;
+]
+
+
+exec_nsl = [
+	execdir "packages/scripts/nsl" "true";
 ]
 
 // run outlaw scripts
