nooblib: fix execdir

--- a/packages/scripts/nooblib.cfg
+++ b/packages/scripts/nooblib.cfg
@@ -1,5 +1,5 @@
 nslVersion = "0.9";
-nslSettings = [];
+nslSettings = "";
 
 // Executes all scripts in a dir
 execdir = [
@@ -14,8 +14,10 @@ execdir = [
 	
 	if (=s $subfolders "true") [ //! find a solution how to only loop over directories
 		loopfiles f $dir "" [	
-			file = (format "%1/%2" $dir $f); 
-			execdir $file;
+			if (&& (!=s $f ".") (!=s $f "..")) [ 
+				file = (format "%1/%2" $dir $f); 
+				execdir $file;
+			]
 		]	
 	]
 ]
@@ -199,8 +201,6 @@ nsl_bind_key_if_script_enabled = [
 		
 	]
 ]
-
-ifActiveBindKey = [ echo (concat $arg1 "still use ifActiveBindKey"); ]
 
 // Only bind a key if the user have set one key in the script options
 bindOptionalKey = [
