remove more logic from the autoexec.cfg

--- a/packages/scripts/nooblib.cfg
+++ b/packages/scripts/nooblib.cfg
@@ -35,17 +35,18 @@ execdirs = [
 // init the nsl
 nsl_init = [
 	nslSettings = $arg1;
+	nslScriptDirectory = $arg2;
+	
+	execdir (concatword $nslScriptDirectory "nsl") "true";
+	
+	exec_outlaw (concatword $nslScriptDirectory "outlaw")
 ]
 
-
-exec_nsl = [
-	execdir "packages/scripts/nsl" "true";
-]
 
 // run outlaw scripts
 exec_outlaw = [
 	local dir f file;
-	dir = "packages/scripts/outlaw";
+	dir = $arg1;
 	
 	loopfiles f $dir cfg [	
 		if (!=s (nsl_is_script_enabled (concatword "outlaw/" $f ".cfg") "false") "false") [
